--- a/css/style.css.css
+++ b/css/style.css.css
@@ -1,19 +1,24 @@
 body {
 
-  margin: 0;
-  padding: 0;
-
-  font-family: "PT Sans Narrow", Arial, sans-serif;
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: 700;
-  color: #00000;
-  text-transform: uppercase;
   
-  background-color: #81b3d2;
+  
+  
   background-image: url("/img/main_photo.jpg");
   background-position: top center;
   background-repeat: no-repeat;
+}
+
+.filter_calendar {
+  background-color: f2f2f2;
+  color: #000; 
+}
+
+.number_one_town {
+  background-color: 81b3d2;
+}
+
+legend {
+  background-color: 766357;
 }
 
 
