--- a/css/style.inner.css
+++ b/css/style.inner.css
@@ -11,9 +11,11 @@ body {
 
 
   background-color: #ffffff;
-  background-image: url("../img/main_photo.jpg");
+  background-image: url("../img/filter-background.jpg");
   background-position: top center;
   background-repeat: no-repeat;
+  width: 1200px;
+  height: 800px;
 
 }
 a {
@@ -24,18 +26,116 @@ a {
  display: none;
 }
 
-.main-navigation{
-  background-color: #fff;
-}
-.site-navigation {
+
+/*.main-header {
+  background-image: url("../img/filter-background.jpg");
+  background-position: top center;
+  background-repeat: no-repeat; 
+  width: 1200px;
+  height: 800px;
+}*/
+
+/*навигация*/
+.main-navigation {
   font-size: 14px;
   line-height: 26px;
-  color: #ffffff;
+  
+} 
+/*логотип*/
+.main-header-logo {
+  width: 140px;
+  height: 71px;
+  object-fit: contain;
+}
 
-  background-color: #fdfdfd;
+
+/*информация*/
+.info-link {
+  width: 93px;
+  height: 12px;
+  font-family: PT Sans Bold, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.86;
+  letter-spacing: normal;
+  text-align: center;
+  
+}
+
+/*фото_видео*/
+.media-link {
+  width: 93px;
+  height: 12px;
+  font-family: PT Sans Bold, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.86;
+  letter-spacing: normal;
+  text-align: center;
+  
+}
+
+/*карта*/
+.map-link {
+  width: 93px;
+  height: 12px;
+  font-family: PT Sans Bold, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.86;
+  letter-spacing: normal;
+  text-align: center;
+}
+
+/*гостиницы*/
+.hotels-link {
+  width: 93px;
+  height: 12px;
+  font-family: PT Sans Bold, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.86;
+  letter-spacing: normal;
+  text-align: center;
+}
+
+
+.main-navigation,
+.features-list,
+.sightseeing-list,
+.site-navigation {
+  list-style: none;
 } 
 
-.site-navigation,
+.main-navigation a {
+  color: #000;
+} 
+
+
+.main-navigation a:hover,
+.main-navigation a:focus {
+  background-color: #82b3d4;
+} 
+
+
+
+/*.site-navigation {
+  font-size: 14px;
+  line-height: 26px;
+  color: #fff;
+
+  background-color: #fdfdfd;
+} */
+
+/*.site-navigation,*/
 .sort_by {
   list-style: none;
 } 
@@ -58,11 +158,21 @@ a {
   color:#fff;
 }
 
-.filter-swimmingpool {
-  background-image: url("../img/checkbox-on.svg");
+
+.information {
+  padding-top: 87px;
+  padding-left: 72px;
+}
+
+
+
+.filter-swimmingpool, 
+.filter-parcking, 
+.filter-wi-fi {
+  /*background-image: url("../img/checkbox-on.svg");*/
   background-repeat: no-repeat;
-  width: 25px;
-  height: 25px;
+  width: 23px;
+  height: 23px;
 
 }
 
@@ -101,8 +211,10 @@ a {
 
 .arrow_up svg: hover,
 .arrow_up svg: focus {
+   fill: currentColor;
    color: #81b3d2;
 } 
+
 
 
 .hotel_results span, a {
@@ -191,7 +303,6 @@ a {
 
 .social-network {
   color:#fff;
-  background-color: 81b3d2;
   text-align: center;
 
 } 
@@ -199,45 +310,53 @@ a {
 .twitter {
   background-image: url("../img/twitter.svg");
   background-repeat: no-repeat;
-  width: 46px;
-  height: 49px;
+  color: #81B3D2;
+  background-color: #5596be;
+  width: 19px;
+  height: 17px;
 }
 
 .twitter svg: hover,
 .twitter svg: focus {
-  color: #fff;
-  background-color: #669ebf;
+  fill: currentColor;
+  color: #5596be;
+
+  
 }
 
 
 .facebook {
   background-image: url("../img/fb-icon.svg");
   background-repeat: no-repeat;
-  width: 46px;
-  height: 49px;
+  color: #81B3D2;
+  background-color: #5596be;
+  width: 19px;
+  height: 17px;
 }
 
 .facebook svg:hover,
 .facebook svg:focus {
-  color: #fff;
-  background-color: #669ebf;
+  fill: currentColor;
+  color: #5596be;
 }
 
 
 .youtube {
-  background-image: url("../img/youtube.svg");
   background-repeat: no-repeat;
-  width: 46px;
-  height: 49px;
+  color: #81B3D2;
+  background-color: #5596be;
+  width: 19px;
+  height: 17px; 
 
 } 
 
+
 .youtube svg:hover,
 .youtube svg:focus {
-  color: #fff;
-  background-color : #669ebf;
-  text-decoration: none;
+  fill: currentColor;
+  color: #5596be;
 }
+
 
 .copyright a, span {
   color:#424242;
@@ -248,6 +367,8 @@ a {
 
 .copyright a, svg:hover,
 .copyright a, svg:focus {
-  color: #fff;;
-  background-color: #80b3d2;
+  fill: currentColor; 
+  color: #80b3d2;
+  
 }
+
