--- a/css/style.css.css
+++ b/css/style.css.css
@@ -21,7 +21,7 @@ a {
   background-image: url("../img/main_photo.jpg");
   background-position: top center;
   background-repeat: no-repeat; 
-  width: 1200px;
+  width: 1200px; 
   height: 800px;
 }
 
@@ -82,6 +82,14 @@ a {
   text-align: center;
 }
 
+.polygon img {
+  width: 1201px;
+  height: 59px;
+  object-fit: contain;
+}
+
+
+
 /*гостиницы*/
 .hotels-link {
   width: 93px;
@@ -115,11 +123,11 @@ a {
 } 
 
 /*белая полоска*/
-.polygon {
+/*.polygon {
   width: 1200px;
   height: 216px;
 
-}
+}*/
 
 /*логотип*/
 .welcome img{
@@ -815,6 +823,775 @@ a {
   color: #94b9d4;
   background-color: #80b3d2;
 }
+
+
+   /*ВНУТРЕННАЯ_СТРАНИЦА*/
+
+  .main-header {
+  margin: 0;
+  padding: 0;
+
+  font-family: PTSans;
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: 700;
+  color: #000;
+  text-transform: uppercase;
+
+
+  background-color: #ffffff;
+  background-image: url("../img/filter-background.jpg");
+  background-position: top center;
+  background-repeat: no-repeat;
+  width: 1200px;
+  height: 562px;
+
+}
+
+
+a {
+  text-decoration: none;
+} 
+
+.visually-hidden {
+ display: none;
+}
+
+/*навигация*/
+.main-navigation {
+  font-size: 14px;
+  line-height: 26px;
+  
+} 
+/*логотип*/
+.main-header-logo {
+  width: 140px;
+  height: 71px;
+  object-fit: contain;
+}
+
+
+/*информация*/
+/*.info-link {
+  width: 93px;
+  height: 12px;
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.86;
+  letter-spacing: normal;
+  text-align: center;
+  
+}*/
+
+.filter-swimmingpool {
+  background-image: ("../img/checkbox-on.svg")
+  width: 27px;
+  height: 23px;
+  object-fit: contain;
+}
+
+
+.filter-swimmingpool :hover,
+.filter-swimmingpool :active {
+  fill: currentColor;
+  color: #6a6a6a; 
+}
+
+
+/*фото_видео*/
+.media-link {
+  width: 93px;
+  height: 12px;
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.86;
+  letter-spacing: normal;
+  text-align: center;
+  
+}
+
+/*карта*/
+.map-link {
+  width: 93px;
+  height: 12px;
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.86;
+  letter-spacing: normal;
+  text-align: center;
+}
+
+/*гостиницы*/
+.hotels-link {
+  width: 93px;
+  height: 12px;
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.86;
+  letter-spacing: normal;
+  text-align: center;  
+}
+
+
+.main-navigation,
+.features-list,
+.sightseeing-list,
+.site-navigation {
+  list-style: none;
+} 
+
+.main-navigation a {
+  color: #000;
+} 
+
+
+.main-navigation a:hover,
+.main-navigation a:focus {
+  background-color: #82b3d4;
+} 
+
+
+
+/*.site-navigation {
+  font-size: 14px;
+  line-height: 26px;
+  color: #fff;
+
+  background-color: #fdfdfd;
+} */
+
+/*.site-navigation,*/
+.sort_by {
+  list-style: none;
+} 
+
+.site-navigation a {
+  color: #000;
+  font-weight: bold;
+} 
+
+
+.site-navigation a:hover,
+.site-navigation a:focus {
+  background-color: #82b3d4;
+} 
+
+.hotel-filters {
+    padding: 0px 40px 0px 40px;
+}
+
+
+
+/*.information, 
+.accommodation, 
+.price_per_night  {
+  color:#fff;
+}*/
+
+
+/*.information {
+  padding-top: 87px;
+  padding-left: 72px;
+}*/
+
+.information legend {
+  
+  font-family: PTSans;
+  font-size: 16px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.31;
+  letter-spacing: normal;
+  text-align: left;
+}
+
+
+.filter-swimmingpool {
+  width: 57px;
+  height: 13px;
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: normal;
+}
+
+.filter-parcking {
+  width: 57px;
+  height: 13px;
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: normal;
+}
+
+.filter-wi-fi {
+  width: 57px;
+  height: 13px;
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: normal;
+}
+
+
+.accommodation legend {
+  font-family: PTSans;
+  font-size: 16px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.31;
+  letter-spacing: normal;
+  text-align: left;
+}
+
+.filter-hotel {
+  width: 77px;
+  height: 12px;
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: normal;
+}
+
+
+.filter-motel {
+  width: 77px;
+  height: 12px;
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: normal;
+} 
+
+.filter-apartment {
+  width: 77px;
+  height: 12px;
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: normal;
+}
+
+.price_per_night legend {
+  width: 183px;
+  height: 16px;
+  font-family: PTSans;
+  font-size: 16px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.31;
+  letter-spacing: normal;
+  text-align: left;
+}
+
+.filter_hotels {
+
+  color:#fff;
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: center;
+  
+} 
+
+
+.price_per_night input {
+  width: 314px;
+  height: 32px;
+  border: solid 2px /*var(--header-top-text-color)*/;
+  color: #fff;
+} 
+
+
+
+.filter-button-button {
+  color: #fff;
+  width: 133px;
+  height: 32px;
+  border: solid 2px;
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left;
+  text-transform: uppercase;
+  border: none;
+  box-shadow: 0px 5px 15px 0px;
+  background-color: rgba (0, 1, 1, 0.2);
+
+}
+
+.results-list {
+  color: #000;
+  background-color: #fff;
+  padding: 0px 72px 0 72px;
+}
+
+.results-list h3 {
+
+  width: 115px;
+  height: 22px;
+  font-family: PTSans;
+  font-size: 21px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.24;
+  letter-spacing: normal;
+  text-align: left; 
+  padding: 
+
+   
+}
+
+
+.results-list p {
+  width: 75px;
+  height: 8px;
+  font-family: PTSan;
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left; 
+  
+}
+
+/*.sort_by {
+  padding: 0px 72px 0 72px;
+}*/
+
+.sort_by_price a {
+  width: 48px;
+  height: 10px;
+  font-family: PTSans;
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left;
+  color: #81b3d2;
+} 
+
+
+.sort_by_type a {
+  width: 49px;
+  height: 8px;
+  opacity: 0.3;
+  font-family: PTSans;
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.3);
+}
+
+
+.sort_by_rating a  {
+  width: 75px;
+  height: 11px;
+  opacity: 0.3;
+  font-family: PTSans;
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.3);
+}
+
+
+.arrow_up svg: hover,
+.arrow_up svg: focus {
+   fill: currentColor;
+   color: #81b3d2;
+} 
+
+.arrow_up{
+  width: 11px;
+  height: 10px;
+  object-fit: contain;
+  background-color: #cacaca;
+}
+
+.arrow_down {
+  width: 11px;
+  height: 10px;
+  object-fit: contain;
+  background-color: #81b3d2;
+}
+
+
+.hotel-list {
+  color:#000;
+  background-color:#fff;
+
+}
+
+
+.hotel_results {
+  padding: 0px 72px 0 72px; 
+
+}
+
+.hotel-list {
+  padding: 0px 72px 0 72px;
+}
+
+/*.hotel_results span {
+  color: #5c5c5c;
+}*/
+
+.Amara_hotel h3 {
+  /*width: 210px;
+  height: 16px;*/
+  font-family: PTSans;
+  font-size: 21px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.24;
+  letter-spacing: normal;
+  text-align: left;
+  padding: 30px 30px 30px 72px;
+}
+
+.hotel_name {
+  /*width: 77px;
+  height: 12px;*/
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left;
+  color: #333333;
+}
+
+
+.stars {
+  width: 18px;
+  height: 17px;
+  object-fit: contain;
+}
+
+.rating_score {
+  color: #bababa;
+  background-color: #f2f2f2;
+  width: 111px;
+  height: 27px;
+  font-weight: normal;
+  padding: 5px 13px 5px 13px;
+  text-align: center;
+}
+
+/*.stars {
+  
+  background-image: url("../img/star.svg");
+  background-repeat:no-repeat center center;
+  width: 50px;
+  height: 50px;
+  
+}*/
+
+.hotel_results {
+  list-style: none;
+} 
+
+.hotel_name {
+  /*width: 77px;
+  height: 12px;*/
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left;
+  color: #333333;
+} 
+
+.hotel_price {
+  /*width: 66px;
+  height: 11px;*/
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left;
+  color: #333333;
+}
+
+.book_hotel {
+  /*width: 142px;
+  height: 27px;*/
+  background-color: #766357;
+  color: #fff;
+  border: none;
+
+
+  /*width: 76px;
+  height: 12px;*/
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left;
+  color: #ffffff; 
+  text-transform: uppercase;
+  padding: 8px 17px 7px 17px;
+
+}
+
+.book_hotel:hover,
+.book_hotel:focus {
+  fill: currentColor;
+  background-color: #604e42;
+  
+}
+
+
+.learn_more {
+  color: #ffff;
+  background-color: #81b2d2;
+  text-transform: uppercase;
+
+  width: 76px;
+  height: 12px;
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left;
+  color: #ffffff;
+  padding: 8px 17px 7px 17px;
+}
+
+.learn_more:hover,
+.learn_more:focus {
+  fill: currentColor;
+  background-color: #5596be;
+} 
+
+
+.Desert_motel h3 {
+  /*width: 210px;
+  height: 16px;*/
+  font-family: PTSans;
+  font-size: 21px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.24;
+  letter-spacing: normal;
+  text-align: left;
+  padding: 30px 30px 30px 72px;
+}
+
+
+.Villas_appartment h3 {
+  /*width: 210px;
+  height: 16px;*/
+  font-family: PTSans;
+  font-size: 21px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.24;
+  letter-spacing: normal;
+  text-align: left;
+  padding: 30px 30px 30px 72px;
+}
+
+
+/*.page-footer {
+  color: #ffffff;
+
+  background-color: #f9fbf6;
+  background-position: 0 0;
+  background-repeat: repeat;
+
+  width: 1200px;
+  height: 120px;
+  opacity: 0.9;
+  
+}*/
+
+.contact-information {
+  color: #000;
+  text-decoration: none;
+
+  /*background-color: #f9fbf6;
+  background-position: 0 0;
+  background-repeat: repeat;*/
+
+  width: 1200px;
+  height: 120px;
+  opacity: 0.9;
+  padding-top: 39px 0
+}
+
+.footer-contacts a:hover,
+.footer-contacts a:focus {
+  text-decoration: none;
+}
+
+.visitsedona {
+  width: 136px;
+  height: 16px;
+  font-family: PTSans;
+  font-size: 21px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.24;
+  letter-spacing: normal;
+  text-align: center;
+  padding: 51px 932px 53px 132px;
+
+}
+
+.social-network {
+  color:#fff;
+  background-color: 81b3d2;
+  text-align: center;
+
+} 
+
+.twitter {
+  /*background-image: url("../img/twitter.svg");*/
+  background-repeat: no-repeat;
+  color: #81B3D2;
+  background-color: #5596be;
+  width: 46px;
+  height: 48px;
+  padding: 23px 13px 13px ;
+}
+
+.twitter svg: hover,
+.twitter svg: focus {
+  fill: currentColor
+  color: #5596be;
+  
+}
+
+
+.facebook {
+  /*background-image: url("../img/fb-icon.svg");*/
+  background-repeat: no-repeat;
+  color: #81B3D2;
+  background-color: #5596be;
+  width: 46px;
+  height: 48px;
+  padding:23px 13px 13px;
+  margin-left: 6px;
+}
+
+.facebook svg:hover,
+.facebook svg:focus {
+  fill: currentColor;
+  color: #5596be;
+}
+
+
+.youtube {
+  background-repeat: no-repeat;
+  color: #81B3D2;
+  background-color: #5596be;
+  width: 46px;
+  height: 48px; 
+  padding:23px 13px 13px;
+  margin-left: 6px;
+
+} 
+
+.youtube svg:hover,
+.youtube svg:focus {
+  fill: currentColor;
+  color: #5596be;
+}
+
+.logo {
+  width: 115px;
+  height: 41px;
+  object-fit: contain;
+  background-color: #231f20;
+  padding: 54px 224px 55px 902px;
+  text-align: left;
+}
+
+/*.etd p{
+  font-family: PTSans;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.24;
+  letter-spacing: normal;
+  text-align: center;
+}*/
+
+
+.copyright a, span {
+  color:#424242;
+  
+} 
+
+.copyright {
+  padding: 54px 224px 55px 902px;
+  text-align: left;
+}
+
+/*.website {
+  padding: 54px 224px 55px 902px;
+  text-align: left;
+}*/
+
+.copyright svg:hover,
+.copyright svg:focus {
+  fill: currentColor;
+  background-color: #5596be;
+  
+}
+
+
 
 
 
